# CI-CD-Github-Actions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
artifact-backup/: action.yml
clang-formatting/: .clang-format  README.md  action.yml
complexity/: action.yml
complexity-with-uncrustify/: action.yml
coverage-cop/: action.yml
doxygen/: action.yml  generate_doxygen.py
doxygen-generation/: action.yml
executable-monitor/: README.md  action.yml  check_output.sh  executable-monitor.py  test.c
formatting/: README.md  action.yml  getFiles  uncrustify.cfg
formatting-bot/: action.yml
git-ip-address/: action.yml  git_ip_address.py
link-verifier/: README.md  action.yml  badUrls.md  requirements.txt  verify-links.py
localhost-echo-server/: action.yml  local_echo_server.go  local_echo_server.py
localhost-http-1.1-server/: action.yml  localhost_http_1.1_server.py
localhost-http-server/: action.yml  localhost_http_server.py
localhost-mqtt-broker/: README.md  action.yml  localhost_credential_creation.py  localhost_mqtt_broker.py  requirements.txt
manifest-verifier/: action.yml  manifest-verifier.py  verify_manifest.py
memory_statistics/: action.yml  makefile  memory_statistics.py  paths.json
misra/: action.yml  generate_misra_json.py  misra_cppcheck.py
misra-cppcheck/: action.yml  generate_misra_json.py  misra_cppcheck.py  misra_rules_public.json
rust-spell-check/: Cargo.toml  action.yml  getFiles
rust-spell-check/crates/libaspell-sys/: Cargo.toml  build.rs  wrapper.h
rust-spell-check/src/: main.rs
(+75 files in other folders)
